Rename package from image-optimizer to image-compressor for better alignment with functionality in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jensone/image-optimizer",
+    "name": "jensone/image-compressor",
     "description": "A PHP library to compress images using the resmush.it API.",
     "type": "library",
     "require": {
